{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 28,
  "lineage": "471f2e2d-5f8b-87b6-589c-821eebabca55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:security-group/sg-0256d0c64c913ec64",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0256d0c64c913ec64",
            "ingress": [],
            "name": "prod_app1_sg",
            "name_prefix": "",
            "owner_id": "081648032368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_app1_sg"
            },
            "tags_all": {
              "Name": "prod_app1_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0973d855f3b376163"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:security-group/sg-0149fcd68462f857b",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0149fcd68462f857b",
            "ingress": [],
            "name": "prod_app2_sg",
            "name_prefix": "",
            "owner_id": "081648032368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_app2_sg"
            },
            "tags_all": {
              "Name": "prod_app2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0973d855f3b376163"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prod_vpc_sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "http port",
            "from_port": 80,
            "id": "sgrule-1251906096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0256d0c64c913ec64",
            "security_group_rule_id": "sgr-0ed98810d58d03fe4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "ssh port",
            "from_port": 22,
            "id": "sgrule-4145957267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0256d0c64c913ec64",
            "security_group_rule_id": "sgr-0967c0fc1e8ab0b5a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "business1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:subnet/subnet-0f87cf23ab7caebd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f87cf23ab7caebd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081648032368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "used01subnet1"
            },
            "tags_all": {
              "Name": "used01subnet1"
            },
            "vpc_id": "vpc-0973d855f3b376163"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:subnet/subnet-0a633dab5cabdd8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a633dab5cabdd8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081648032368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "used01subnet2"
            },
            "tags_all": {
              "Name": "used01subnet2"
            },
            "vpc_id": "vpc-0973d855f3b376163"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:subnet/subnet-047995259b388b94b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047995259b388b94b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081648032368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "used01subnet3"
            },
            "tags_all": {
              "Name": "used01subnet3"
            },
            "vpc_id": "vpc-0973d855f3b376163"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:081648032368:vpc/vpc-0973d855f3b376163",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcd0fb575c6b3aab",
            "default_route_table_id": "rtb-0aa7417eddfc4379b",
            "default_security_group_id": "sg-02b1076edd33cce8c",
            "dhcp_options_id": "dopt-0a581c37760537dfe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0973d855f3b376163",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa7417eddfc4379b",
            "owner_id": "081648032368",
            "tags": {
              "Name": "prod_vpc",
              "env": "prod"
            },
            "tags_all": {
              "Name": "prod_vpc",
              "env": "prod"
            }
          }
        }
      ]
    }
  ]
}